--- a/src/components/navbar/dropdown.astro
+++ b/src/components/navbar/dropdown.astro
@@ -1,5 +1,5 @@
 ---
-import { Dropdown as DropdownContainer, DropdownItems } from "astro-navbar";
+import { Dropdown as DropdownContainer, DropdownItems, DropdownSubmenu } from "astro-navbar";
 const { title, lastItem, children } = Astro.props;
 ---
 
@@ -33,11 +33,44 @@ const { title, lastItem, children } = Astro.props;
           class="px-3 lg:py-2 lg:bg-white lg:rounded-md lg:shadow-sm lg:border flex flex-col">
           {
             children.map((item) => (
-              <a
-                href={item.path}
-                class="py-1 text-gray-600 hover:text-gray-900">
-                {item.title}
-              </a>
+              item.children ? (
+                <DropdownSubmenu class="relative">
+                  <button class="py-1 text-gray-600 hover:text-gray-900 flex items-center justify-between w-full">
+                    <span>{item.title}</span>
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                      stroke-width="3"
+                      stroke="currentColor"
+                      class="w-3 h-3">
+                      <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        d="M8.25 4.5l7.5 7.5-7.5 7.5"></path>
+                    </svg>
+                  </button>
+                  <DropdownItems>
+                    <div class="absolute left-full top-0 ml-1 w-56 z-50">
+                      <div class="bg-white rounded-md shadow-lg border border-gray-200 py-2 px-3 flex flex-col">
+                        {item.children.map((subItem) => (
+                          <a
+                            href={subItem.path}
+                            class="py-1 text-gray-600 hover:text-gray-900 text-sm whitespace-nowrap">
+                            {subItem.title}
+                          </a>
+                        ))}
+                      </div>
+                    </div>
+                  </DropdownItems>
+                </DropdownSubmenu>
+              ) : (
+                <a
+                  href={item.path}
+                  class="py-1 text-gray-600 hover:text-gray-900">
+                  {item.title}
+                </a>
+              )
             ))
           }
         </div>
